unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/zkfedex__QueuedInternationalCommodity__c.object-meta.xml
<CustomObject>
    <label>FedEx Queued International Commodity</label>
    <nameField>
        <label>Queued International Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Queued International Commodities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>