unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__CiMarksAndNumbers__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CiMarksAndNumbers__c</fullName>
    <label>CI Marks and Numbers</label>
    <length>15</length>
    <type>Text</type>
</CustomField>