unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__CustomsValue__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CustomsValue__c</fullName>
    <label>Customs Value</label>
    <precision>17</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>