unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__CustomsValueCurrency__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CustomsValueCurrency__c</fullName>
    <label>Customs Value Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>