unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__ExportLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ExportLicenseNumber__c</fullName>
    <label>Export License Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>