unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__HarmonizedCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HarmonizedCode__c</fullName>
    <label>Harmonized Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>