unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__NaftaPreferenceCriterion__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NaftaPreferenceCriterion__c</fullName>
    <label>Preference Criterion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>