unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__NaftaProducerDetermination__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NaftaProducerDetermination__c</fullName>
    <label>Producer Determination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>