unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__NumberOfPieces__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NumberOfPieces__c</fullName>
    <label>Number of Pieces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>