unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__Quantity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>