unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__QueuedShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__QueuedShipment__c</fullName>
    <label>FedEx Queued Shipment</label>
    <referenceTo>zkfedex__QueuedShipment__c</referenceTo>
    <relationshipLabel>FedEx Queued International Commodities</relationshipLabel>
    <relationshipName>FedEx_Queued_International_Commodities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>