unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__TrackingId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TrackingId__c</fullName>
    <label>Package Tracking Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>