unpackaged/main/default/objects/zkfedex__QueuedInternationalCommodity__c/fields/zkfedex__UnitPriceCurrency__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__UnitPriceCurrency__c</fullName>
    <label>Unit Price Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>